# egtools

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  checkout_prepare  cleanup.sh  configure.ac
cookbook/hashtable/: hashtable.c  hashtable.h  test_hashtable.c
cookbook/json/: json.h  test_json.c
cookbook/midi/: midi.c  midi.h  midi_freq.c
eged/: main.c
egscripts/: Makefile.am  acclean.sh  backup.sh  build.sh  bundle.sh  egcify.sh  egnum.sh  fold.sh  license.sh  makefwrd.sh  mandelbrot.sh  mkmath.sh  plp.sh  printit.sh
etc/: genstr2ent.c  test_entities.c
hashtable/: Makefile  hashtable.c  hashtable.h  test_hashtable.txt
include/: Makefile.am  eg-devel.h  egdebug.h  eghash.h  eglist.h  egmath.h  egstring.h  egtok.h  egtree.h  egxml.h
json/: Makefile  json.c
lib/: Makefile.am  eg_dir_foreach.c  eg_fletcher32.c  eg_parse_date.c  eghash.c  eghashfuncs.c  egmath.c  egstring.c  entities.c  helpers.c  pushd.c  token.c  xml.c
man/: Makefile.am  eghash.3  egstring.3  egtools.7  egxml.3  pbhier.7
misc_install/: Makefile.am  emacs  myconfig_input
small_c/: Makefile.am  atab.c  egwc.c  egx.c  egx2.c  fortune.c  sizeof.c  tree.c  ts2date.c
tests/: Makefile.am  alice.txt  test_eghash.c  test_eghash.sh  test_frac.c  test_html.c  test_parse_date.c
