lib_LTLIBRARIES = libeg-devel.la
libeg_devel_la_SOURCES = \
 helpers.c \
 eg_parse_date.c \
 eg_fletcher32.c \
 eg_dir_foreach.c \
 egstring.c \
 egmath.c \
 token.c \
 xml.c \
 eghash.c \
 entities.c \
 eghashfuncs.c \
 pushd.c
libeg_devel_la_LDFLAGS = -version-info 0:0:0
libeg_devel_la_CPPFLAGS = -I$(top_srcdir)/include -Wall
